mainflux/k8s/mainflux/things.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: things
  namespace: grpc-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mainflux-iot.ha.rs
    secretName: mainflux-secret
  rules:
  - host: mainflux-iot.ha.rs
    http:
      paths:
      - path: /things
        backend:
          serviceName: things
          servicePort: 8182
---
apiVersion: v1
kind: Service
metadata:
  name: things
  namespace: grpc-services
  labels:
    component: things
spec:
  type: LoadBalancer
  ports:
  - port: 8182
    name: http
  - port: 8183
    name: grpc
  selector:
    component: things
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: things
  namespace: grpc-services
spec:
  selector:
    matchLabels:
      component: things
  template:
    metadata:
      labels:
        component: things
    spec:
      containers:
      - name: things
        image: mainflux/things:latest
        ports:
        - containerPort: 8182
          name: things-http
        - containerPort: 8183
          name: things-grpc
        livenessProbe:
          httpGet:
            path: /version
            port: 8182
          initialDelaySeconds: 3
          periodSeconds: 3
