mainflux/k8s/mainflux/users.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: users
  namespace: grpc-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mainflux-iot.ha.rs
    secretName: mainflux-cert
  rules:
  - host: mainflux-iot.ha.rs
    http:
      paths:
      - path: /users
        backend:
          serviceName: users
          servicePort: 8180
---
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: grpc-services
  labels:
    component: users
spec:
  type: LoadBalancer
  selector:
    component: users
  ports:
  - port: 8180
    name: http
  - port: 8181
    name: grpc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: users
  namespace: grpc-services
spec:
  selector:
    matchLabels:
      component: users
  template:
    metadata:
      labels:
        component: users
    spec:
      containers:
      - name: users
        image: mainflux/users:latest
        ports:
        - containerPort: 8180
          name: users-http
        - containerPort: 8181
          name: users-grpc
        livenessProbe:
          httpGet:
            path: /version
            port: 8180
          initialDelaySeconds: 3
          periodSeconds: 3
